--- a/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase.uvprojx
+++ b/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase.uvprojx
@@ -449,6 +449,16 @@
               <FileType>1</FileType>
               <FilePath>..\Core\Src\OLED.c</FilePath>
             </File>
+            <File>
+              <FileName>Function.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\Function.c</FilePath>
+            </File>
+            <File>
+              <FileName>Motor_Carbase_Special.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\Motor_Carbase_Special.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
