--- a/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase.uvprojx
+++ b/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase.uvprojx
@@ -81,7 +81,7 @@
           </BeforeMake>
           <AfterMake>
             <RunUserProg1>0</RunUserProg1>
-            <RunUserProg2>1</RunUserProg2>
+            <RunUserProg2>0</RunUserProg2>
             <UserProg1Name></UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
@@ -314,7 +314,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>4</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -405,6 +405,26 @@
               <FilePath>..\Core\Src\ROBOTIC_Arm.c</FilePath>
             </File>
             <File>
+              <FileName>OLED.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\OLED.c</FilePath>
+            </File>
+            <File>
+              <FileName>Function.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\Function.c</FilePath>
+            </File>
+            <File>
+              <FileName>Motor_Carbase_Special.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\Motor_Carbase_Special.c</FilePath>
+            </File>
+            <File>
+              <FileName>Motor_CarBase_Simple.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\Motor_CarBase_Simple.c</FilePath>
+            </File>
+            <File>
               <FileName>main.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Core/Src/main.c</FilePath>
@@ -443,21 +463,6 @@
               <FileName>stm32f4xx_hal_msp.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f4xx_hal_msp.c</FilePath>
-            </File>
-            <File>
-              <FileName>OLED.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Core\Src\OLED.c</FilePath>
-            </File>
-            <File>
-              <FileName>Function.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Core\Src\Function.c</FilePath>
-            </File>
-            <File>
-              <FileName>Motor_Carbase_Special.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Core\Src\Motor_Carbase_Special.c</FilePath>
             </File>
           </Files>
         </Group>
